--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                 <h1 class="name">akshat vishal</h1>
             </div> 
         </div>
-
+    </div>
+    <div class="pagination">
+        <button class="back button">Back</button>
+        <button class="next button">Next</button>
     </div>
 </body>
 </html>
